# pose2d-tool

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
script/: save_movenet.py
script/onnx/: inference.py
src/: format.py  predict.py  preprocess.py
src/ml/: movenet.py
tests/: test_prepare_data.py
