[project]
name = "pose-estimation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kevinchueh", email = "slime21023@gmail.com"},
]
dependencies = [
    "tensorflow>=2.15.0",
    "tensorflow-hub>=0.16.1",
    "matplotlib>=3.8.3",
    "onnxruntime>=1.17.1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
onnx = [
    "tf2onnx>=1.16.1",
]
